kubernetes-Manifests/Springboot-k8s-main/adminer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.49.2
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8080
      nodePort: 31085
