kubernetes-Manifests/Springboot-k8s-main/customer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-app
  labels:
    app: customer-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service-app
  template:
    metadata:
      labels:
        app: customer-service-app
    spec:
      containers:
        - name: customer-service-app
          image: aminesaber/customer-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  ports:
    - targetPort: 8081
      port: 8081
  selector:
    app: customer-service-app
