kubernetes-Manifests/Springboot-k8s-main/inventory-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-app
  labels:
    app: inventory-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : inventory-service-app
  template:
    metadata:
      labels:
        app: inventory-service-app
    spec:
      containers:
        - name: inventory-service-app
          image: aminesaber/inventory-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082

---

kind: Service
apiVersion: v1
metadata:
  name:  inventory-service
spec:
  selector:
    app:  inventory-service-app
  ports:
    - port:  8082
      targetPort:  8082
