kubernetes-Manifests/Springboot-k8s-main/keycloak-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.49.2
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8080
      nodePort: 31095
