kubernetes-Manifests/Springboot-k8s-main/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-app
  labels:
    app: order-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : order-service-app
  template:
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
      - name: order-service-app
        image: aminesaber/order-service:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8083

---

kind: Service
apiVersion: v1
metadata:
  name:  order-service
spec:
  selector:
    app:  order-service-app
  ports:
  - port:  8083
    targetPort:  8083
