kubernetes-Manifests/Springboot-k8s-main/web-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-client-app
    labels:
        app: web-client-app
spec:
    replicas: 1
    selector:
      matchLabels:
        app: web-client-app
    template:
        metadata:
          labels:
            app: web-client-app
        spec:
          containers:
            - name: web-client
              image: aminesaber/web-client:0.0.1
              imagePullPolicy: Always
              ports:
                  - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: web-client-service
spec:
    type: LoadBalancer
    externalIPs:
      - 192.168.49.2
    ports:
      - port: 80
        targetPort: 80
        protocol: TCP
        nodePort: 32542
    selector:
      app: web-client-app
