kubernetes-Manifests/Springboot-k8s-main/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
    rules:
      - host: keycloak.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: keycloak
                  port:
                    number: 8095
